// Database Schema untuk Sistem Monitoring Mutu Akademik
// Buka di https://dbdiagram.io untuk visualisasi
// Copy-paste kode ini ke dbdiagram.io

Table prodi {
  id bigint [pk, increment]
  kode_prodi varchar [unique, not null]
  nama_prodi varchar [not null]
  nama_singkat varchar
  deskripsi text
  kaprodi_id bigint
  created_at timestamp
  updated_at timestamp
}

Table users {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [unique, not null]
  username varchar [unique, not null]
  password varchar [not null]
  role enum [not null, note: 'admin, kaprodi, dosen, gjm_reviewer, gkm_reviewer']
  prodi_id bigint
  is_active boolean [default: true]
  email_verified_at timestamp
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

Table dosen {
  id bigint [pk, increment]
  user_id bigint [not null]
  nama_lengkap varchar [not null]
  nidn varchar [unique, not null]
  gelar_akademik varchar
  jabatan_akademik varchar
  kontak_email varchar [not null]
  prodi_id bigint [not null]
  bio text
  foto_profil varchar
  status enum [default: 'aktif', note: 'aktif, tidak_aktif, pensiun']
  is_kaprodi boolean [default: false]
  is_wali_kelas boolean [default: false]
  created_at timestamp
  updated_at timestamp
}

Table matakuliah {
  id bigint [pk, increment]
  prodi_id bigint [not null]
  kode_mk varchar [unique, not null]
  nama_mk varchar [not null]
  sks int
  semester int
  jenis_mk varchar
  deskripsi text
  capaian_pembelajaran text
  status enum [default: 'aktif', note: 'aktif, tidak_aktif']
  created_at timestamp
  updated_at timestamp
}

Table dosen_matakuliah {
  id bigint [pk, increment]
  dosen_id bigint [not null]
  matakuliah_id bigint [not null]
  created_at timestamp
  updated_at timestamp
  
  Indexes {
    (dosen_id, matakuliah_id) [unique]
  }
}

Table ajaran {
  id bigint [pk, increment]
  tahun_ajaran year [not null]
  semester enum [note: 'ganjil, genap']
  tanggal_mulai date
  tanggal_akhir date
  status enum [default: 'non_aktif', note: 'aktif, non_aktif']
  prodi_id bigint
  created_at timestamp
  updated_at timestamp
}

Table rps {
  id bigint [pk, increment]
  matakuliah_id bigint [not null]
  ajaran_id bigint [not null]
  dosen_id bigint [not null]
  deskripsi text
  capaian_pembelajaran text
  strategi_pembelajaran text
  penugasan text
  penilaian text
  file_rps varchar
  status_rps enum [default: 'draft', note: 'draft, menunggu_review, sudah_divalidasi, revisi']
  status_review_rps enum
  tanggal_upload date
  tanggal_validasi date
  catatan_validasi text
  created_at timestamp
  updated_at timestamp
}

Table materi {
  id bigint [pk, increment]
  rps_id bigint [not null]
  judul_materi varchar [not null]
  deskripsi text
  pertemuan_ke int
  file_materi varchar
  file_format varchar
  capaian_pembelajaran text
  tanggal_upload date
  status enum [default: 'belum_upload', note: 'belum_upload, sudah_upload, perlu_revisi']
  status_upload_materi enum
  catatan text
  created_at timestamp
  updated_at timestamp
}

Table monitoring {
  id bigint [pk, increment]
  ajaran_id bigint [not null]
  prodi_id bigint [not null]
  jenis_monitoring enum [note: 'rps, materi, kuisioner, perwaliaan, evaluasi']
  total_dosen int
  dosen_selesai int
  dosen_belum int
  persentase_kepatuhan decimal
  tanggal_monitoring date
  catatan text
  created_at timestamp
  updated_at timestamp
}

Table reminder {
  id bigint [pk, increment]
  dosen_id bigint
  kaprodi_id bigint
  tipe_reminder enum [note: 'rps_review, materi_upload, perwaliaan, persiapan_kuliah, review_soal, kuisioner']
  judul varchar [not null]
  deskripsi text
  tanggal_reminder date
  waktu_reminder time
  status enum [default: 'belum_kirim', note: 'belum_kirim, sudah_kirim, dibaca, dikerjakan']
  status_pengiriman enum
  tanggal_kirim date
  metode_pengiriman varchar [default: 'email']
  created_at timestamp
  updated_at timestamp
}

Table jadwal_reminder {
  id bigint [pk, increment]
  prodi_id bigint
  tipe_reminder enum [note: 'rps_review, materi_upload, perwaliaan, persiapan_kuliah, review_soal, kuisioner']
  hari_sebelum_deadline int
  frekuensi enum [default: 'sekali', note: 'sekali, harian, mingguan, bulanan']
  waktu_pengiriman time
  template_pesan text
  status enum [default: 'aktif', note: 'aktif, tidak_aktif']
  catatan text
  target_role varchar
  tanggal_mulai date
  tanggal_akhir date
  last_sent_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table log_email {
  id bigint [pk, increment]
  reminder_id bigint
  prodi_id bigint
  penerima_email varchar [not null]
  subjek varchar [not null]
  isi_email text
  status_pengiriman enum [default: 'pending', note: 'success, failed, pending']
  pesan_error text
  tanggal_pengiriman date
  percobaan_kirim int [default: 1]
  created_at timestamp
  updated_at timestamp
}

Table laporan_gkm {
  id bigint [pk, increment]
  prodi_id bigint [not null]
  ajaran_id bigint [not null]
  dosen_ketua bigint [not null]
  periode_mulai date
  periode_akhir date
  jenis_laporan enum [default: 'bulanan', note: 'bulanan, semester, tahunan']
  ringkasan_temuan text
  hasil_monitoring_rps text
  hasil_monitoring_materi text
  hasil_monitoring_kuisioner text
  rencana_perbaikan text
  file_laporan varchar
  status_laporan enum [default: 'draft', note: 'draft, menunggu_review, approved, revisi']
  tanggal_submit date
  tanggal_buat_laporan date
  reviewed_by bigint
  tanggal_review date
  catatan_review text
  created_at timestamp
  updated_at timestamp
}

Table laporan_gjm {
  id bigint [pk, increment]
  ajaran_id bigint [not null]
  periode_mulai date
  periode_akhir date
  jenis_laporan enum [default: 'bulanan', note: 'bulanan, semester, tahunan']
  ringkasan_mutu_institusi text
  analisis_kepatuhan text
  temuan_utama text
  rekomendasi_perbaikan text
  rencana_tindakan text
  file_laporan varchar
  file_ppt varchar
  status_laporan enum [default: 'draft', note: 'draft, menunggu_review, approved, revisi']
  tanggal_submit date
  reviewed_by bigint
  tanggal_review date
  catatan_review text
  jumlah_prodi_terlibat int
  jumlah_laporan_gkm_diterima int
  created_at timestamp
  updated_at timestamp
}

Table kuisioner {
  id bigint [pk, increment]
  ajaran_id bigint [not null]
  judul varchar [not null]
  deskripsi text
  target enum [default: 'mahasiswa', note: 'dosen, mahasiswa, semua']
  tanggal_mulai date
  tanggal_akhir date
  status enum [default: 'draft', note: 'draft, aktif, tertutup, dianalisis']
  status_kuisioner enum
  created_at timestamp
  updated_at timestamp
}

Table pertanyaan_kuisioner {
  id bigint [pk, increment]
  kuisioner_id bigint [not null]
  urutan_pertanyaan int [not null]
  pertanyaan text [not null]
  tipe_pertanyaan enum [default: 'skala_likert', note: 'pilihan_ganda, skala_likert, teks_terbuka, checkbox']
  opsi_jawaban text
  created_at timestamp
  updated_at timestamp
}

Table jawaban_kuisioner {
  id bigint [pk, increment]
  pertanyaan_kuisioner_id bigint [not null]
  dosen_id bigint
  responden_identifier varchar
  jawaban text [not null]
  tanggal_jawab date
  created_at timestamp
  updated_at timestamp
}

Table evaluasi_artefak {
  id bigint [pk, increment]
  rps_id bigint [not null]
  materi_id bigint
  evaluator_id bigint [not null]
  jenis_artefak enum [default: 'rps', note: 'rps, materi, soal_ujian']
  skor_evaluasi int
  catatan_evaluasi text
  status_evaluasi enum [default: 'revisi', note: 'approve, revisi, ditolak']
  tanggal_evaluasi date
  saran_perbaikan text
  tanggal_revisi_selesai date
  jumlah_revisi int [default: 0]
  created_at timestamp
  updated_at timestamp
}

Table perwaliaan {
  id bigint [pk, increment]
  dosen_id bigint [not null]
  ajaran_id bigint [not null]
  jumlah_mahasiswa int
  tanggal_mulai_perwalian date
  tanggal_akhir_perwalian date
  status_perwalian enum [default: 'belum_dimulai', note: 'belum_dimulai, sedang_berjalan, selesai']
  jumlah_sesi_konsultasi int
  catatan_perwalian text
  nilai_evaluasi decimal
  created_at timestamp
  updated_at timestamp
}

Table pencapaian_kpi {
  id bigint [pk, increment]
  prodi_id bigint [not null]
  ajaran_id bigint [not null]
  nama_kpi varchar [not null]
  deskripsi text
  target_nilai decimal
  nilai_realisasi decimal
  persentase_pencapaian decimal
  status_kpi enum [default: 'tidak_tercapai', note: 'tidak_tercapai, tercapai, terlampaui']
  catatan_kpi text
  created_at timestamp
  updated_at timestamp
}

Table kelas {
  id bigint [pk, increment]
  prodi_id bigint [not null]
  kode_kelas varchar [not null]
  tingkat int [not null]
  program_studi varchar [not null]
  tahun_angkatan int [not null]
  status enum [default: 'aktif', note: 'aktif, tidak_aktif']
  created_at timestamp
  updated_at timestamp
  
  Indexes {
    (prodi_id, kode_kelas) [unique]
  }
}

Table kuesioner_uploads {
  id bigint [pk, increment]
  nama_file varchar [not null]
  file_path varchar [not null]
  periode varchar [not null]
  prodi_id bigint [not null]
  kode_matakuliah varchar
  nama_matakuliah varchar
  tingkat int
  deskripsi text
  total_responden int [default: 0]
  hasil_analisis json
  status enum [default: 'uploaded', note: 'uploaded, processing, completed, error']
  created_at timestamp
  updated_at timestamp
}

Table document_chunks {
  id bigint [pk, increment]
  kuesioner_upload_id bigint
  template_id bigint
  chunk_text text [not null]
  chunk_index int [not null]
  embedding json
  metadata json
  created_at timestamp
  updated_at timestamp
}

Table embeddings_cache {
  id bigint [pk, increment]
  text_hash varchar [unique, not null]
  embedding json [not null]
  model varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Table template_laporan {
  id bigint [pk, increment]
  prodi_id bigint
  nama_template varchar [not null]
  nama_file varchar [not null]
  jenis_file varchar [not null]
  file_path varchar [not null]
  ukuran_file int
  deskripsi text
  structure_data json
  is_indexed boolean [default: false]
  uploaded_by bigint
  created_at timestamp
  updated_at timestamp
}

Table laporan_bulanan {
  id bigint [pk, increment]
  periode varchar [not null]
  bulan varchar [not null]
  tahun int [not null]
  prodi_id bigint
  user_id bigint [not null]
  template_id bigint
  total_kuesioner int [default: 0]
  total_responden int [default: 0]
  index_kepuasan_rata_rata decimal
  persen_kepuasan_rata_rata decimal
  hasil_laporan json
  data_kuesioner json
  data_analisis json
  file_word varchar
  file_pdf varchar
  status enum [default: 'pending', note: 'pending, processing, completed, error']
  error_message text
  created_at timestamp
  updated_at timestamp
  
  Indexes {
    (periode, prodi_id) [unique]
  }
}

// Relationships
Ref: users.prodi_id > prodi.id [delete: cascade]
Ref: dosen.user_id > users.id [delete: cascade]
Ref: dosen.prodi_id > prodi.id [delete: cascade]
Ref: matakuliah.prodi_id > prodi.id [delete: cascade]
Ref: dosen_matakuliah.dosen_id > dosen.id [delete: cascade]
Ref: dosen_matakuliah.matakuliah_id > matakuliah.id [delete: cascade]
Ref: ajaran.prodi_id > prodi.id [delete: cascade]
Ref: rps.matakuliah_id > matakuliah.id [delete: cascade]
Ref: rps.ajaran_id > ajaran.id [delete: cascade]
Ref: rps.dosen_id > dosen.id [delete: cascade]
Ref: materi.rps_id > rps.id [delete: cascade]
Ref: monitoring.ajaran_id > ajaran.id [delete: cascade]
Ref: monitoring.prodi_id > prodi.id [delete: cascade]
Ref: reminder.dosen_id > dosen.id [delete: cascade]
Ref: reminder.kaprodi_id > dosen.id [delete: cascade]
Ref: jadwal_reminder.prodi_id > prodi.id [delete: cascade]
Ref: log_email.reminder_id > reminder.id [delete: cascade]
Ref: log_email.prodi_id > prodi.id [delete: cascade]
Ref: laporan_gkm.prodi_id > prodi.id [delete: cascade]
Ref: laporan_gkm.ajaran_id > ajaran.id [delete: cascade]
Ref: laporan_gkm.dosen_ketua > dosen.id [delete: cascade]
Ref: laporan_gkm.reviewed_by > dosen.id [delete: set null]
Ref: laporan_gjm.ajaran_id > ajaran.id [delete: cascade]
Ref: laporan_gjm.reviewed_by > users.id [delete: set null]
Ref: kuisioner.ajaran_id > ajaran.id [delete: cascade]
Ref: pertanyaan_kuisioner.kuisioner_id > kuisioner.id [delete: cascade]
Ref: jawaban_kuisioner.pertanyaan_kuisioner_id > pertanyaan_kuisioner.id [delete: cascade]
Ref: jawaban_kuisioner.dosen_id > dosen.id [delete: cascade]
Ref: evaluasi_artefak.rps_id > rps.id [delete: cascade]
Ref: evaluasi_artefak.materi_id > materi.id [delete: cascade]
Ref: evaluasi_artefak.evaluator_id > dosen.id [delete: cascade]
Ref: perwaliaan.dosen_id > dosen.id [delete: cascade]
Ref: perwaliaan.ajaran_id > ajaran.id [delete: cascade]
Ref: pencapaian_kpi.prodi_id > prodi.id [delete: cascade]
Ref: pencapaian_kpi.ajaran_id > ajaran.id [delete: cascade]
Ref: kelas.prodi_id > prodi.id [delete: cascade]
Ref: kuesioner_uploads.prodi_id > prodi.id [delete: cascade]
Ref: document_chunks.kuesioner_upload_id > kuesioner_uploads.id [delete: cascade]
Ref: document_chunks.template_id > template_laporan.id [delete: cascade]
Ref: template_laporan.prodi_id > prodi.id [delete: cascade]
Ref: template_laporan.uploaded_by > users.id [delete: set null]
Ref: laporan_bulanan.prodi_id > prodi.id [delete: cascade]
Ref: laporan_bulanan.user_id > users.id [delete: cascade]
Ref: laporan_bulanan.template_id > template_laporan.id [delete: set null]
